classDiagram
    class User {
        +id: int
        +username: string
        +email: string
        +password: string
        +role: string
        +created_at: datetime
        +updated_at: datetime
        +validatePassword(password: string): boolean
        +generateToken(): string
    }
    
    class Language {
        +id: int
        +code: string
        +name: string
        +is_default: boolean
        +created_at: datetime
        +updated_at: datetime
    }
    
    class Profile {
        +id: int
        +photo: string
        +cv_url: string
        +created_at: datetime
        +updated_at: datetime
    }
    
    class ProfileTranslation {
        +id: int
        +profile_id: int
        +language_id: int
        +name: string
        +title: string
        +bio: text
        +location: string
        +created_at: datetime
        +updated_at: datetime
    }
    
    class Project {
        +id: int
        +github_url: string
        +demo_url: string
        +featured: boolean
        +start_date: date
        +end_date: date
        +category: string
        +created_at: datetime
        +updated_at: datetime
    }
    
    class ProjectTranslation {
        +id: int
        +project_id: int
        +language_id: int
        +title: string
        +short_description: string
        +full_description: text
        +technologies: text
        +created_at: datetime
        +updated_at: datetime
    }
    
    class ProjectImage {
        +id: int
        +project_id: int
        +image_path: string
        +display_order: int
        +created_at: datetime
        +updated_at: datetime
    }
    
    class Article {
        +id: int
        +cover_image: string
        +published_date: date
        +status: string
        +created_at: datetime
        +updated_at: datetime
    }
    
    class ArticleTranslation {
        +id: int
        +article_id: int
        +language_id: int
        +title: string
        +slug: string
        +summary: text
        +content: text
        +meta_description: string
        +meta_keywords: string
        +created_at: datetime
        +updated_at: datetime
    }
    
    class Expertise {
        +id: int
        +icon: string
        +display_order: int
        +created_at: datetime
        +updated_at: datetime
    }
    
    class ExpertiseTranslation {
        +id: int
        +expertise_id: int
        +language_id: int
        +title: string
        +description: text
        +skills: text
        +created_at: datetime
        +updated_at: datetime
    }
    
    class Contact {
        +id: int
        +email: string
        +name: string
        +message: text
        +status: string
        +created_at: datetime
        +updated_at: datetime
    }
    
    Profile "1" -- "*" ProfileTranslation
    ProfileTranslation "*" -- "1" Language
    
    Project "1" -- "*" ProjectTranslation
    Project "1" -- "*" ProjectImage
    ProjectTranslation "*" -- "1" Language
    
    Article "1" -- "*" ArticleTranslation
    ArticleTranslation "*" -- "1" Language
    
    Expertise "1" -- "*" ExpertiseTranslation
    ExpertiseTranslation "*" -- "1" Language